# cuRay-Tracer

./: CMakeLists.txt  README.md  build.sh  build_and_run.sh  clean.sh  run.sh
include/: Camera.h  FPSCounter.h  RayTracer.h  Scene.h  Window.h
include/cuda/: cuda_utils.h  raytracing_kernel.h
include/math/: Ray.h  Vec3.h
include/primitives/: Material.h  Plane.h  Sphere.h
src/: Camera.cpp  FPSCounter.cpp  RayTracer.cpp  Scene.cpp  Window.cpp  main.cpp
src/cuda/: cuda_utils.cu  raytracing_kernel.cu
